--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   },
   "devDependencies": {
     "vitest": "^3.1.4"
+  },
+  "dependencies": {
+    "node-cron": "^4.1.0",
+    "node-fetch": "^3.3.2"
   }
 }
