--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "test": "vitest"
+    "test": "vitest --run"
   },
   "devDependencies": {
     "vitest": "^3.1.4"
   },
   "dependencies": {
+    "cheerio": "^1.0.0",
     "node-cron": "^4.1.0",
     "node-fetch": "^3.3.2"
   }
