--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "cheerio": "^1.0.0",
     "dotenv": "^16.5.0",
     "node-cron": "^4.1.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "openai": "^5.0.1",
+    "zod": "^3.25.42"
   }
 }
