--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.5.0",
     "node-cron": "^4.1.0",
     "node-fetch": "^3.3.2",
+    "node-telegram-bot-api": "^0.63.0",
     "openai": "^5.0.1",
     "zod": "^3.25.42"
   }
