--- a/package.json
+++ b/package.json
@@ -19,15 +19,20 @@
     "test": "vitest --run"
   },
   "devDependencies": {
+    "prisma": "^6.17.1",
     "vitest": "^3.1.4"
   },
   "dependencies": {
+    "@mozilla/readability": "^0.6.0",
+    "@prisma/client": "^6.17.1",
     "cheerio": "^1.0.0",
     "dotenv": "^16.5.0",
+    "jsdom": "^27.0.0",
     "node-cron": "^4.1.0",
     "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.63.0",
     "openai": "^5.0.1",
+    "puppeteer": "^24.22.3",
     "zod": "^3.25.42"
   }
 }
