chore: update Docker setup and simplify rate limiting
Dockerfile:
- Switch to node:22-slim with Chromium dependencies for Puppeteer
- Use pnpm instead of npm
- Add Prisma client generation step

.dockerignore:
- Exclude dev tooling configs, test files, and .claude/

Rate limiting:
- Simplify to single RATE_LIMIT_SECONDS env var (default 60s)
- RSS feed and article pages share same rate limit

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,44 @@
+# Dependencies
 node_modules/
-data/
+
+# Git
+.git/
+.gitignore
+
+# Environment and secrets
 .env
-.git
+.env.*
+
+# Database files
+*.db
+*.db-journal
+data/
+
+# Dev tooling configs
+.claude/
+.husky/
+eslint.config.js
+.prettierrc
+vitest.config.js
+pnpm-workspace.yaml
+
+# Test files
+tests/
+src/*.test.js
+**/*.test.js
+**/*.spec.js
+
+# Documentation
+README.md
+TODO.md
+LICENSE
+*.md
+
+# Docker
+Dockerfile
+docker-compose.yml
+.dockerignore
+
+# Misc
+.DS_Store
+*.log
