feat: replace regex matching with LLM-powered item extraction
- Add content cleaner to strip boilerplate before LLM processing
- Add item extractor using OpenAI structured output (Zod schemas)
- Add item validator with fuzzy matching against item database
- Add price predictor for per-item price direction analysis
- Add reasoning_effort support for o4-mini/gpt-5-mini models
- Add model benchmarking script with parallel execution support

Benchmark results (4 representative posts):
- o4-mini:low: 77.6% F1, 16s latency, 100% precision (recommended)
- gpt-5-mini:low: 80.3% F1, 49s latency
- gpt-5-mini:medium: 88.3% F1, 99s latency

Baseline was 15.2% F1 - this is a 5x improvement.

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,15 @@ LATEST_API_URL="https://prices.runescape.wiki/api/v1/osrs/latest"
 
 # OpenAI configuration
 OPENAI_API_KEY="sk-your-openai-api-key-here"
-OPENAI_MODEL="gpt-4.1-mini"
+#
+# Model options (benchmark results):
+#   SPEED-OPTIMIZED: o4-mini + low     = 77.6% F1, 16s latency, 100% precision
+#   BALANCED:        gpt-5-mini + low  = 80.3% F1, 49s latency
+#   ACCURACY-MAX:    gpt-5-mini + medium = 88.3% F1, 99s latency
+#
+OPENAI_MODEL="o4-mini"
+# Reasoning effort for o4-mini/gpt-5-mini: low, medium, high (omit for non-reasoning models)
+OPENAI_REASONING_EFFORT="low"
 
 # Telegram bot configuration
 TELEGRAM_BOT_TOKEN="your-telegram-bot-token-here"
