feat: optimize extraction to gpt-5-mini:medium with voting=2
Benchmark results show this configuration achieves 100% F1:
- gpt-5-mini:medium + voting=2: 100% F1, 100% precision, 61K tokens
- Previous o4-mini:medium + voting=5: 95% F1, 160K tokens

Changes:
- Set numRuns=2 in hybridExtractor.js (was 5)
- Update .env to use gpt-5-mini with medium reasoning
- Update .env.example with new benchmark results and OPENAI_ADMIN_KEY
- Update README.md with new benchmark table and pipeline description

--- a/.env.example
+++ b/.env.example
@@ -13,15 +13,19 @@ LATEST_API_URL="https://prices.runescape.wiki/api/v1/osrs/latest"
 
 # OpenAI configuration
 OPENAI_API_KEY="sk-your-openai-api-key-here"
+# Admin key (optional) - required for benchmark usage tracking
+OPENAI_ADMIN_KEY="sk-admin-your-admin-key-here"
 #
-# Model options (benchmark results):
-#   SPEED-OPTIMIZED: o4-mini + low     = 77.6% F1, 16s latency, 100% precision
-#   BALANCED:        gpt-5-mini + low  = 80.3% F1, 49s latency
-#   ACCURACY-MAX:    gpt-5-mini + medium = 88.3% F1, 99s latency
+# Model options (benchmark results with voting=2):
+#   BEST:     gpt-5-mini + medium = 100% F1, 100% precision, 61K tokens
+#   FAST:     gpt-5-mini + low    = 90% F1, 100% precision, 68K tokens
+#   BUDGET:   o4-mini + medium    = 87% F1, 100% precision, 68K tokens
 #
-OPENAI_MODEL="o4-mini"
-# Reasoning effort for o4-mini/gpt-5-mini: low, medium, high (omit for non-reasoning models)
-OPENAI_REASONING_EFFORT="low"
+# Extraction uses 2-run voting for consensus (configurable in hybridExtractor.js)
+#
+OPENAI_MODEL="gpt-5-mini"
+# Reasoning effort for o4-mini/gpt-5-mini: low, medium, high
+OPENAI_REASONING_EFFORT="medium"
 
 # Telegram bot configuration
 TELEGRAM_BOT_TOKEN="your-telegram-bot-token-here"
